minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__object_ref__tests__absolute_catalog_schema_reference_2.snap
---
source: minigu/parser/src/parser/impls/object_ref.rs
expression: parsed
---
- Absolute:
    - - Name: d
      - start: 1
        end: 2
    - - Name: s
      - start: 3
        end: 4
- start: 0
  end: 4
