minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__object_ref__tests__absolute_directory_path_1.snap
---
source: minigu/parser/src/parser/impls/object_ref.rs
expression: parsed
---
- - Name: dir
  - start: 1
    end: 4
