minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__object_ref__tests__catalog_object_parent_reference_1.snap
---
source: minigu/parser/src/parser/impls/object_ref.rs
expression: parsed
---
schema:
  - Absolute: []
  - start: 0
    end: 1
objects: []
