minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__object_ref__tests__graph_reference_2.snap
---
source: minigu/parser/src/parser/impls/object_ref.rs
expression: parsed
---
- Name: graph
- start: 0
  end: 7
