minigu/parser/src/parser/impls/snapshots/gql_parser__parser__impls__object_ref__tests__graph_reference_3.snap
---
source: minigu/parser/src/parser/impls/object_ref.rs
expression: parsed
---
- Parameter: abc
- start: 0
  end: 5
